<resources>
    <string name="app_name">Survey</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="next_question">Next question</string>
    <string name="finish_survey">Finish survey</string>
    <string name="thank_you_for_participating_in_our_survey">Thank you for participating in our Survey.</string>
    <string name="exit_app">Exit App</string>
</resources>